--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,22 @@
-body {
-  margin: 0;
+.main {
+  color: $main-dark;
+
+  &__content {
+    padding-block: 110px;
+    display: flex;
+    gap: 110px;
+    flex-direction: column;
+    align-items: center;
+
+    @include on-tablet {
+      padding-block: 140px;
+      gap: 140px;
+    }
+
+    @include on-desktop {
+      padding-top: 62px;
+      padding-bottom: 170px;
+      gap: 170px;
+    }
+  }
 }
